--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -78,6 +78,10 @@ body {
   background-color: #b68e65;
   color: #301d17;
 }
+.SetupMenu .playersSetups .playerSetup select option {
+  font-weight: 600;
+  font-size: 16px;
+}
 .SetupMenu .playersSetups .playerSetup .playerBg {
   width: 200px;
   height: 200px;
