--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -80,6 +80,11 @@ body {
         border-radius: 5px;
         background-color: #b68e65;
         color: #301d17;
+
+        option {
+          font-weight: 600;
+          font-size: 16px;
+        }
       }
 
       .playerBg {
