--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -108,6 +108,55 @@ body {
   box-shadow: 0px 0px 15px 0px rgb(0, 0, 0);
 }
 
+.SetupMenu.closed {
+  width: 160px;
+  height: 820px;
+  padding: 10px;
+  margin-right: 10px;
+  background-color: #b68e65;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+}
+.SetupMenu.closed .smLabel {
+  display: none;
+}
+.SetupMenu.closed .smPlay {
+  display: none;
+}
+.SetupMenu.closed .playersSetups {
+  flex-direction: column;
+}
+.SetupMenu.closed .playersSetups .playerSetup {
+  width: 140px;
+  height: 140px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #56342a;
+  margin: 5px 0 5px 0;
+  border-radius: 10px;
+}
+.SetupMenu.closed .playersSetups .playerSetup label {
+  display: none;
+}
+.SetupMenu.closed .playersSetups .playerSetup select {
+  display: none;
+}
+.SetupMenu.closed .playersSetups .playerSetup .playerBg {
+  width: 120px;
+  height: 120px;
+  margin: 10px;
+  border-radius: 10px;
+}
+.SetupMenu.closed .playersSetups .playerSetup .playerBg .playerPawn {
+  width: 80px;
+  height: 80px;
+  border-radius: 40px;
+  border: 8px solid;
+}
+
 .PlayingArea {
   display: flex;
   width: 1250px;
@@ -172,10 +221,8 @@ body {
   border: 2px solid #301d17;
 }
 .Board .BoardField {
-  text-align: center;
   border-radius: 5px;
   display: grid;
-  grid-template: repeat(2, 1fr)/repeat(2, 1fr);
   justify-items: center;
   align-items: center;
 }
