--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -119,6 +119,63 @@ body {
   }
 }
 
+.SetupMenu.closed {
+  width: 160px;
+  height: 820px;
+  padding: 10px;
+  margin-right: 10px;
+  background-color: #b68e65;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+
+  .smLabel {
+    display: none;
+  }
+
+  .smPlay {
+    display: none;
+  }
+
+  .playersSetups {
+    flex-direction: column;
+
+    .playerSetup {
+      width: 140px;
+      height: 140px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      background-color: #56342a;
+      margin: 5px 0 5px 0;
+      border-radius: 10px;
+
+      label {
+        display: none;
+      }
+
+      select {
+        display: none;
+      }
+
+      .playerBg {
+        width: 120px;
+        height: 120px;
+        margin: 10px;
+        border-radius: 10px;
+
+        .playerPawn {
+          width: 80px;
+          height: 80px;
+          border-radius: 40px;
+          border: 8px solid;
+        }
+      }
+    }
+  }
+}
+
 .PlayingArea {
   display: flex;
   width: 1250px;
@@ -194,17 +251,10 @@ body {
   border: 2px solid #301d17;
 
   .BoardField {
-    text-align: center;
     border-radius: 5px;
-
     display: grid;
-    grid-template: repeat(2, 1fr) / repeat(2, 1fr);
     justify-items: center;
     align-items: center;
-
-    // display: flex;
-    // align-items: center;
-    // justify-content: center;
 
     .Pawn {
       width: 26px;
