--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -228,9 +228,11 @@ body {
     .MovesMenu {
       margin-top: 50px;
 
-      p {
-        width: 350px;
-        color: #b68e65;
+      .move-detail {
+        p {
+          width: 350px;
+          color: #b68e65;
+        }
       }
     }
   }
