--- a/src/style.css
+++ b/src/style.css
@@ -49,6 +49,7 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  position: relative;
 }
 .SetupMenu .smLabel {
   background-color: #56342a;
@@ -193,6 +194,33 @@ body {
   font-weight: 600;
   text-align: center;
 }
+.SetupMenu .error-msg {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 36px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  z-index: 100;
+  width: 400px;
+  height: 100px;
+  color: #cc0000;
+  background-color: #b68e65;
+  border: 10px solid #cc0000;
+  border-radius: 10px;
+}
+.SetupMenu .error-msg.closed {
+  display: none;
+}
 .SetupMenu.closed {
   width: 160px;
   height: 820px;
@@ -213,7 +241,8 @@ body {
 }
 .SetupMenu.closed .smLabel,
 .SetupMenu.closed .smPlay,
-.SetupMenu.closed .difficultySetup {
+.SetupMenu.closed .difficultySetup,
+.SetupMenu.closed .error-msg {
   display: none;
 }
 .SetupMenu.closed .playersSetups {
