--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -2,3 +2,7 @@ $light_color: #b68e65;
 $mid_color: #56342a;
 $dark_color: #301d17;
 $error_color: #cc0000;
+$redPlayer_color: #ea4335;
+$greenPlayer_color: #34a853;
+$yellowPlayer_color: #fbbc05;
+$bluePlayer_color: #4285f4;
