--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -239,6 +239,7 @@ body {
 
       p {
         width: 150px;
+        color: black;
       }
 
       .Dice {
@@ -314,11 +315,12 @@ body {
     align-items: center;
 
     .Pawn {
+      @include flex_center;
+      @include bold_center_text(14px);
       width: 26px;
       height: 26px;
       border-radius: 13px;
-      border: 1px solid black;
-      box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 1);
+      box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 1);
     }
   }
 }
