--- a/src/style.css
+++ b/src/style.css
@@ -339,6 +339,7 @@ body {
 }
 .PlayingArea .PlayMenu .Controls p {
   width: 150px;
+  color: black;
 }
 .PlayingArea .PlayMenu .Controls .Dice {
   display: -webkit-box;
@@ -437,10 +438,21 @@ body {
           align-items: center;
 }
 .Board .BoardField .Pawn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 14px;
+  font-weight: 600;
+  text-align: center;
   width: 26px;
   height: 26px;
   border-radius: 13px;
-  border: 1px solid black;
-  -webkit-box-shadow: 0px 0px 5px 0px rgb(0, 0, 0);
-          box-shadow: 0px 0px 5px 0px rgb(0, 0, 0);
+  -webkit-box-shadow: 0px 0px 6px 0px rgb(0, 0, 0);
+          box-shadow: 0px 0px 6px 0px rgb(0, 0, 0);
 }
