file structure update

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,11 @@
 @import "_variables";
 @import "_mixins";
+@import "./../components/App/App.style.scss";
+@import "./../components/Board/Board.style.scss";
+@import "./../components/Board/BoardField/BoardField.style.scss";
+@import "./../components/Game/Game.style.scss";
+@import "./../components/PlayingArea/PlayingArea.style.scss";
+@import "./../components/SetupMenu/SetupMenu.style.scss";
 
 * {
   box-sizing: border-box;
@@ -10,317 +16,4 @@
 
 body {
   background-color: $dark_color;
-}
-
-.Game {
-  @include flex_center;
-  flex-direction: row;
-  height: 100vh;
-  width: 100vw;
-}
-
-.SetupMenu {
-  @include flex_center;
-  @include bold_center_text(16px);
-  width: 1100px;
-  padding: 10px;
-  background-color: $light_color;
-  border-radius: 10px;
-  flex-direction: column;
-  position: relative;
-
-  .smLabel {
-    background-color: $mid_color;
-    color: $light_color;
-    font-size: 32px;
-    margin: 10px;
-    border-radius: 10px;
-    padding: 20px 0 20px 0;
-    width: 1060px;
-  }
-
-  .smPlay {
-    @include bold_center_text(32px);
-    width: 1060px;
-    background-color: $mid_color;
-    color: $light_color;
-    border: none;
-    border-radius: 10px;
-    margin: 10px;
-    padding: 20px 0 20px 0;
-    cursor: pointer;
-  }
-
-  .playersSetups {
-    @include flex_center;
-    flex-direction: row;
-
-    .playerSetup {
-      @include flex_center;
-      width: 250px;
-      flex-direction: column;
-      background-color: $mid_color;
-      margin: 10px;
-      border-radius: 10px;
-
-      label {
-        width: 200px;
-        padding: 10px 0 10px 0;
-        border-radius: 10px;
-        background-color: $light_color;
-        color: $dark_color;
-      }
-
-      select {
-        @include bold_center_text(16px);
-        margin: 20px 0 20px 0;
-        width: 200px;
-        padding: 10px 0 10px 0;
-        border: none;
-        border-radius: 10px;
-        background-color: $light_color;
-        color: $dark_color;
-
-        option {
-          @include bold_center_text(16px);
-        }
-      }
-
-      .playerBg {
-        @include flex_center;
-        width: 200px;
-        height: 200px;
-        margin: 20px 0 20px 0;
-        border-radius: 10px;
-
-        .playerPawn {
-          width: 100px;
-          height: 100px;
-          border-radius: 50px;
-          border: 10px solid;
-          text-align: center;
-          box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 1);
-        }
-      }
-    }
-  }
-
-  .difficultySetup {
-    @include flex_center;
-    // width: 1060px;
-    // margin: 10px;
-
-    label {
-      @include bold_center_text(24px);
-      margin: 10px;
-      width: 520px;
-      padding: 12px 0 12px 0;
-      border-radius: 10px;
-      background-color: $mid_color;
-      color: $light_color;
-    }
-    select {
-      @include bold_center_text(24px);
-      margin: 10px;
-      width: 520px;
-      padding: 12px 0 12px 0;
-      border: none;
-      border-radius: 10px;
-      background-color: $mid_color;
-      color: $light_color;
-
-      option {
-        @include bold_center_text(24px);
-      }
-    }
-  }
-
-  .error-msg {
-    @include modal_msg;
-    font-size: 36px;
-    width: 400px;
-    height: 100px;
-    color: $error_color;
-    background-color: $light_color;
-    border: 10px solid $error_color;
-    border-radius: 10px;
-  }
-
-  &.closed {
-    width: 160px;
-    height: 820px;
-    padding: 10px;
-    margin-right: 10px;
-    background-color: $light_color;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-
-    .smLabel,
-    .smPlay,
-    .difficultySetup,
-    .error-msg {
-      display: none;
-    }
-
-    .playersSetups {
-      flex-direction: column;
-
-      .playerSetup {
-        @include flex_center;
-        flex-direction: column;
-        width: 140px;
-        height: 140px;
-        background-color: $mid_color;
-        margin: 5px 0 5px 0;
-        border-radius: 10px;
-
-        label {
-          display: none;
-        }
-
-        select {
-          display: none;
-        }
-
-        .playerBg {
-          width: 120px;
-          height: 120px;
-          margin: 10px;
-          border-radius: 10px;
-
-          .playerPawn {
-            width: 80px;
-            height: 80px;
-            border-radius: 40px;
-            border: 8px solid;
-          }
-        }
-      }
-    }
-  }
-}
-
-.PlayingArea {
-  display: flex;
-  width: 1250px;
-  height: 820x;
-  flex-direction: row;
-  border: 10px solid $light_color;
-  border-radius: 10px;
-
-  .PlayMenu {
-    height: 800px;
-    width: 430px;
-
-    p {
-      @include bold_center_text(20px);
-      color: $light_color;
-      background-color: $mid_color;
-      width: 200px;
-      padding: 10px;
-      margin: 10px;
-      border: 2px solid $light_color;
-    }
-
-    button {
-      @include bold_center_text(20px);
-      color: $light_color;
-      background-color: $mid_color;
-      padding: 10px;
-      margin: 10px;
-      border: 2px solid $light_color;
-    }
-
-    .Controls {
-      display: flex;
-      flex-direction: row;
-
-      p {
-        width: 150px;
-        color: black;
-      }
-
-      .Dice {
-        @include flex_center;
-        width: 50px;
-        margin: 10px;
-        padding: 10px;
-        font-size: 20px;
-        font-weight: 600;
-        color: $light_color;
-        background-color: $mid_color;
-        border: 2px solid $light_color;
-      }
-    }
-
-    .MovesMenu {
-      margin-top: 50px;
-
-      .move-detail {
-        p {
-          width: 350px;
-          color: $light_color;
-        }
-      }
-    }
-  }
-
-  .continue-msg {
-    @include modal_msg;
-    @include flex_center;
-    flex-direction: column;
-    padding: 10px;
-    width: 400px;
-    color: $mid_color;
-    background-color: $light_color;
-    border-top: 10px solid $bluePlayer_color;
-    border-right: 10px solid $redPlayer_color;
-    border-bottom: 10px solid $greenPlayer_color;
-    border-left: 10px solid $yellowPlayer_color;
-    border-radius: 10px;
-
-    p {
-      @include bold_center_text(24px);
-      margin: 10px;
-      padding: 10px;
-    }
-
-    button {
-      color: $light_color;
-      background-color: $mid_color;
-      padding: 10px;
-      margin: 10px;
-      border: none;
-      font-size: 20px;
-      font-weight: 600;
-    }
-  }
-}
-
-.Board {
-  width: 800px;
-  height: 800px;
-  background-color: $dark_color;
-  display: grid;
-  grid-template: repeat(11, 1fr) / repeat(11, 1fr);
-  gap: 2px 2px;
-  border: 2px solid $dark_color;
-
-  .BoardField {
-    border-radius: 5px;
-    display: grid;
-    justify-items: center;
-    align-items: center;
-
-    .Pawn {
-      @include flex_center;
-      @include bold_center_text(14px);
-      width: 26px;
-      height: 26px;
-      border-radius: 13px;
-      box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 1);
-    }
-  }
 }
