--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,39 @@
-* {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+.Board {
+  width: 800px;
+  height: 800px;
+  background-color: #301d17;
+  display: grid;
+  grid-template: repeat(11, 1fr)/repeat(11, 1fr);
+  gap: 2px 2px;
+  border: 2px solid #301d17;
 }
 
-body {
-  background-color: #301d17;
+.BoardField {
+  border-radius: 5px;
+  display: grid;
+  justify-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.BoardField .Pawn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 14px;
+  font-weight: 600;
+  text-align: center;
+  width: 26px;
+  height: 26px;
+  border-radius: 13px;
+  -webkit-box-shadow: 0px 0px 6px 0px rgb(0, 0, 0);
+          box-shadow: 0px 0px 6px 0px rgb(0, 0, 0);
 }
 
 .Game {
@@ -26,6 +52,136 @@ body {
           flex-direction: row;
   height: 100vh;
   width: 100vw;
+}
+
+.PlayingArea {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 1250px;
+  height: 820x;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  border: 10px solid #b68e65;
+  border-radius: 10px;
+}
+.PlayingArea .PlayMenu {
+  height: 800px;
+  width: 430px;
+}
+.PlayingArea .PlayMenu p {
+  font-size: 20px;
+  font-weight: 600;
+  text-align: center;
+  color: #b68e65;
+  background-color: #56342a;
+  width: 200px;
+  padding: 10px;
+  margin: 10px;
+  border: 2px solid #b68e65;
+}
+.PlayingArea .PlayMenu button {
+  font-size: 20px;
+  font-weight: 600;
+  text-align: center;
+  color: #b68e65;
+  background-color: #56342a;
+  padding: 10px;
+  margin: 10px;
+  border: 2px solid #b68e65;
+}
+.PlayingArea .PlayMenu .Controls {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+.PlayingArea .PlayMenu .Controls p {
+  width: 150px;
+  color: black;
+}
+.PlayingArea .PlayMenu .Controls .Dice {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 50px;
+  margin: 10px;
+  padding: 10px;
+  font-size: 20px;
+  font-weight: 600;
+  color: #b68e65;
+  background-color: #56342a;
+  border: 2px solid #b68e65;
+}
+.PlayingArea .PlayMenu .MovesMenu {
+  margin-top: 50px;
+}
+.PlayingArea .PlayMenu .MovesMenu .move-detail p {
+  width: 350px;
+  color: #b68e65;
+}
+.PlayingArea .continue-msg {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  z-index: 100;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 10px;
+  width: 400px;
+  color: #56342a;
+  background-color: #b68e65;
+  border-top: 10px solid #4285f4;
+  border-right: 10px solid #ea4335;
+  border-bottom: 10px solid #34a853;
+  border-left: 10px solid #fbbc05;
+  border-radius: 10px;
+}
+.PlayingArea .continue-msg.closed {
+  display: none;
+}
+.PlayingArea .continue-msg p {
+  font-size: 24px;
+  font-weight: 600;
+  text-align: center;
+  margin: 10px;
+  padding: 10px;
+}
+.PlayingArea .continue-msg button {
+  color: #b68e65;
+  background-color: #56342a;
+  padding: 10px;
+  margin: 10px;
+  border: none;
+  font-size: 20px;
+  font-weight: 600;
 }
 
 .SetupMenu {
@@ -290,169 +446,14 @@ body {
   border: 8px solid;
 }
 
-.PlayingArea {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 1250px;
-  height: 820x;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  border: 10px solid #b68e65;
-  border-radius: 10px;
-}
-.PlayingArea .PlayMenu {
-  height: 800px;
-  width: 430px;
-}
-.PlayingArea .PlayMenu p {
-  font-size: 20px;
-  font-weight: 600;
-  text-align: center;
-  color: #b68e65;
-  background-color: #56342a;
-  width: 200px;
-  padding: 10px;
-  margin: 10px;
-  border: 2px solid #b68e65;
-}
-.PlayingArea .PlayMenu button {
-  font-size: 20px;
-  font-weight: 600;
-  text-align: center;
-  color: #b68e65;
-  background-color: #56342a;
-  padding: 10px;
-  margin: 10px;
-  border: 2px solid #b68e65;
-}
-.PlayingArea .PlayMenu .Controls {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-}
-.PlayingArea .PlayMenu .Controls p {
-  width: 150px;
-  color: black;
-}
-.PlayingArea .PlayMenu .Controls .Dice {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 50px;
-  margin: 10px;
-  padding: 10px;
-  font-size: 20px;
-  font-weight: 600;
-  color: #b68e65;
-  background-color: #56342a;
-  border: 2px solid #b68e65;
-}
-.PlayingArea .PlayMenu .MovesMenu {
-  margin-top: 50px;
-}
-.PlayingArea .PlayMenu .MovesMenu .move-detail p {
-  width: 350px;
-  color: #b68e65;
-}
-.PlayingArea .continue-msg {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  z-index: 100;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  padding: 10px;
-  width: 400px;
-  color: #56342a;
-  background-color: #b68e65;
-  border-top: 10px solid #4285f4;
-  border-right: 10px solid #ea4335;
-  border-bottom: 10px solid #34a853;
-  border-left: 10px solid #fbbc05;
-  border-radius: 10px;
-}
-.PlayingArea .continue-msg.closed {
-  display: none;
-}
-.PlayingArea .continue-msg p {
-  font-size: 24px;
-  font-weight: 600;
-  text-align: center;
-  margin: 10px;
-  padding: 10px;
-}
-.PlayingArea .continue-msg button {
-  color: #b68e65;
-  background-color: #56342a;
-  padding: 10px;
-  margin: 10px;
-  border: none;
-  font-size: 20px;
-  font-weight: 600;
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.Board {
-  width: 800px;
-  height: 800px;
+body {
   background-color: #301d17;
-  display: grid;
-  grid-template: repeat(11, 1fr)/repeat(11, 1fr);
-  gap: 2px 2px;
-  border: 2px solid #301d17;
-}
-.Board .BoardField {
-  border-radius: 5px;
-  display: grid;
-  justify-items: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-.Board .BoardField .Pawn {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  font-size: 14px;
-  font-weight: 600;
-  text-align: center;
-  width: 26px;
-  height: 26px;
-  border-radius: 13px;
-  -webkit-box-shadow: 0px 0px 6px 0px rgb(0, 0, 0);
-          box-shadow: 0px 0px 6px 0px rgb(0, 0, 0);
 }
