--- a/src/components/PlayingArea/PlayingArea.style.scss
+++ b/src/components/PlayingArea/PlayingArea.style.scss
@@ -52,12 +52,14 @@
     }
 
     .MovesMenu {
-      margin-top: 50px;
+      @include flex_center;
+      flex-direction: column;
+      margin-top: 30px;
 
       .move-detail {
-        p {
+        button {
           width: 350px;
-          color: $light_color;
+          padding: 20px;
         }
       }
     }
