--- a/src/style.css
+++ b/src/style.css
@@ -34,6 +34,7 @@
   border-radius: 13px;
   -webkit-box-shadow: 0px 0px 6px 0px rgb(0, 0, 0);
           box-shadow: 0px 0px 6px 0px rgb(0, 0, 0);
+  color: #301d17;
 }
 
 .Game {
@@ -92,6 +93,10 @@
   margin: 10px;
   border: 2px solid #b68e65;
 }
+.PlayingArea .PlayMenu button:hover {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+}
 .PlayingArea .PlayMenu .Controls {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -103,7 +108,7 @@
 }
 .PlayingArea .PlayMenu .Controls p {
   width: 150px;
-  color: black;
+  color: #301d17;
 }
 .PlayingArea .PlayMenu .Controls .Dice {
   display: -webkit-box;
@@ -143,6 +148,10 @@
 .PlayingArea .PlayMenu .MovesMenu .move-detail button {
   width: 350px;
   padding: 20px;
+}
+.PlayingArea .PlayMenu .MovesMenu .move-detail button:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 .PlayingArea .continue-msg {
   display: -webkit-box;
